# testomat_tests

./: .gitignore  GEMINI.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/pages/: index.html
.github/workflows/: tests.yml
src/api/: __init__.py  client.py  models.py
src/api/models/: __init__.py  models.py
src/web/: Application.py  application.py
src/web/components/: ProjectCard.py  SuiteItem.py  __init__.py  auth_header.py  crisp_chat.py  project_card.py  side_bar.py
src/web/pages/: DashboardPage.py  HomePage.py  LoginPage.py  NewProjectPage.py  ProjectDeatilsPage.py  ProjectDetailsPage.py  __init__.py  create_project_page.py  dashboard_page.py  home_page.py  landing_page.py  login_page.py  new_project_details_page.py  new_project_page.py  project_details_page.py  project_page.py  project_settings_page.py
src/web/selenium/: __init__.py
src/web/selenium/core/: __init__.py  base_page.py  waits.py
src/web/selenium/pages/: __init__.py  login_page.py  login_page_v2.py
tests/: conftest.py  first_test.py
tests/api/: test_login_projects.py
tests/fixtures/: api.py  app.py  config.py  cookie_helper.py  playwright.py  selenium.py
tests/web/: create_new_project_test.py  crisp_chat_test.py  dashboard_page_test.py  login_page_test.py  new_page_test.py
tests/web/enterprise_plan_tests/: create_new_project_test.py  create_suite_test.py  dashboard_page_test.py  empty_title_error_test.py  existing_project_test.py  new_project_test.py
tests/web/free_plan_tests/: free_plan_dashboard_test.py
tests/web/selenium/: simple_test_selenium.py
